Added get_active_options endpoint
