# ocr_translate/urls.py
@@ -30,4 +30,5 @@ urlpatterns = [
     path('run_tsl/', views.run_tsl, name='run_tsl'),
     path('run_ocrtsl/', views.run_ocrtsl, name='run_ocrtsl'),
     path('set_manual_translation/', views.set_manual_translation, name='set_manual_translation'),
+    path('get_active_options/', views.get_active_options, name='get_active_options'),
 ]
