# openapi.yml
@@ -1,4 +1,4 @@
-openapi: 3.0.0
+openapi: 3.1.0
 info:
   title: ocr_translate server API
   description: Description of the API for communicating with an [ocr_translate server](https://github.com/Crivella/ocr_translate/) via HTTP requests.
@@ -281,3 +281,35 @@ paths:
           description: Method not allowed.
         '200':    # status code
           description: Success.
+  /get_active_options:
+    get:
+      summary: Get active options.
+      description: Get the active options for the OCR and translation.
+      responses:
+        '405':   # status code
+          description: Method not allowed.
+        '200':    # status code
+          description: A JSON dictionary with the active options.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  options:
+                    type: object
+                    properties:
+                      box_model: &options_model_dict
+                        type: object
+                        properties:
+                          <option_name>:
+                            type: object
+                            properties:
+                              type:
+                                type: string
+                              default:
+                                type: string
+                              description:
+                                type: string
+                              value: ""
+                      ocr_model: *options_model_dict
+                      tsl_model: *options_model_dict
